feat: Implement websockets for conection

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,14 @@
 # ===========================================
 
 # Supabase Configuration (REQUIRED)
-# Get these values from: https://supabase.com/dashboard/project/_/settings/api
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+# Get from: https://supabase.com/dashboard/project/_/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# Backend API (celaest-back)
+# Must match CORS_ORIGINS in backend .env
+NEXT_PUBLIC_CELAEST_API_URL=http://localhost:3001
+
 # Supabase Service Role Key (OPTIONAL - Server-side only)
-# ⚠️ NEVER expose this key to the client
-# Only needed for admin operations in API routes
+# ⚠️ NEVER expose to client - only for API routes
 # SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
